# Lumino

./: .gitignore  README.md  clientDockerfile
algorithm/: Cargo.toml  README.md  README_EN.md  README_ZH.md  generate_plonk_crs.sh  test.sh
algorithm/src/: auxiliary.rs  error.rs  generate.rs  lib.rs  parameters.rs  setup.rs  verify.rs
setup-mpc-client/: README.md  accounts.txt  docker-compose.yml  package.json
setup-mpc-client/src/: admin-client.ts  app.ts  compute.ts  downloader.ts  index.ts  terminal-interface.ts  uploader.ts
setup-mpc-common/: package.json
setup-mpc-common/src/: http-client.ts  mpc-server.ts  mpc-state.ts
setup-mpc-server/: README.md  package.json
setup-mpc-server/contract/: evidence.sol
setup-mpc-server/src/: app.test.ts  app.ts  command.ts  evidence.test.ts  evidence.ts  index.ts  network.ts  participant-selector.ts  server.ts  transcript-store.ts  verifier.ts
setup-mpc-server/src/state/: advance-state.test.ts  advance-state.ts  create-participant.ts  default-state.ts  order-waiting-participants.test.ts  select-participants.test.ts
setup-mpc-server/test/: platon_http_test.js
setup-mpc-web/: .env  .env.dev  .env.prod  .env.sit  .eslintrc.js  .prettierrc  README.md  package.json  vue.config.js
setup-mpc-web/public/: index.html
setup-mpc-web/src/: App.vue  main.js
setup-mpc-web/src/api/: index.js
setup-mpc-web/src/assets/style/: index.scss  reset.scss
setup-mpc-web/src/pages/: download.vue  home.vue
setup-mpc-web/src/router/: index.js
setup-mpc-web/src/utils/: batDown.js  request.js  utils.js
(+2 files in other folders)
