[package]
name = "mpc_crs"
version = "0.1.0"
authors = ["xueli"]
license = "MIT/Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
bls_curve = []
bn_curve = []
time_log = []

[dependencies]
rand = "0.4"
crossbeam = "0.3.0"
num_cpus = "1.7.0"
byteorder = "1.1.0"
structopt = "0.3.20"
indicatif = "0.15.0"
sha256 = "1.0.2"
thiserror = "1"

bellman = { package = "bellman_ce", git = "https://github.com/matter-labs/bellman", default_features = false, branch = "beta" }
